--- a/examples/flutter_view/android/app/src/main/AndroidManifest.xml
+++ b/examples/flutter_view/android/app/src/main/AndroidManifest.xml
@@ -11,8 +11,7 @@
          In most cases you can leave this as-is, but you if you want to provide
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
-    <application android:name="io.flutter.app.FlutterApplication" android:label="flutter_view" android:icon="@mipmap/ic_launcher"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+    <application android:name="io.flutter.app.FlutterApplication" android:label="flutter_view" android:icon="@mipmap/ic_launcher">
         <activity android:name=".NavigateActivity"
                   android:launchMode="singleTop"
                   android:theme="@style/Theme.AppCompat.Light.NoActionBar"
@@ -24,20 +23,20 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"
+        <activity android:name=".SplitScreenActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection"
             android:hardwareAccelerated="true">
         </activity>
         <activity
-            android:name=".CountActivity"
-            android:parentActivityName=".FullScreenActivity"
+            android:name=".FullScreenAndroidActivity"
+            android:parentActivityName=".FullScreenFlutterActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection">
 
         </activity>
     <activity
-        android:name=".FullScreenActivity"
+        android:name=".FullScreenFlutterActivity"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection">
     </activity>
